output/dev/intcallcallerexpr.err
output prefix: llvm/dev/intcallcallerexpr
llvmas: /usr/lib/llvm-3.8/bin/llvm-as
llc: /usr/lib/llvm-3.8/bin/llc
cc: gcc
codegen: /home/rafay/Desktop/decafCompiler/answer/decafcomp
stdlib: /home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c
generating llvm code:/home/rafay/Desktop/decafCompiler/answer/decafcomp ... ok
; ModuleID = 'Test'

declare void @print_int(i32)

define void @test(i32 %a) {
entry:
  %a1 = alloca i32
  store i32 %a, i32* %a1
  call void @print_int(i32 1)
}

define i32 @main() {
entry:
  call void @test(i32 12)
  ret i32 0
}
assembling to bitcode:/usr/lib/llvm-3.8/bin/llvm-as "llvm/dev/intcallcallerexpr.llvm" -o "llvm/dev/intcallcallerexpr.llvm.bc" ... failed (1)
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/intcallcallerexpr.llvm:10:1: error: expected instruction opcode
}
^
converting to native code:/usr/lib/llvm-3.8/bin/llc "llvm/dev/intcallcallerexpr.llvm.bc" -o "llvm/dev/intcallcallerexpr.llvm.s" ... ok
linking:gcc -o "llvm/dev/intcallcallerexpr.llvm.exec" "llvm/dev/intcallcallerexpr.llvm.s" "/home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c" ... ok
running:llvm/dev/intcallcallerexpr.llvm.exec ... ok
